--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "streamflow-app",
-  "version": "0.2.0",
+  "name": "fyfy-finance-app",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
