--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "StreamFlow",
-  "name": "StreamFlow - Real-time Payments",
+  "short_name": "FyfyFinance",
+  "name": "FyfyFinance - Real-time Payments",
   "icons": [
     {
       "src": "icon/favicon.ico",
